Added a rudimentary error detection system for reading, and 2 misc changes to main.cpp and singletonHolder.h. Should have been 3 commits, but I was lazy.

--- a/exampleJSON/SEA_ErrorConfig.json
+++ b/exampleJSON/SEA_ErrorConfig.json
@@ -1,5 +1,5 @@
 {
-  "MinimumEnchanterVersion": "Cool, what does this do?",
+  "MinimumEnchanterVersion": 1,
   "SpecialFlag": "I didn't read the documentation!'",
   "EnchantmentKeywords": [],
   "SwapData": [
