Formatting changes to the logger, plus more test cases.

--- a/exampleJSON/SEA_ErrorConfig.json
+++ b/exampleJSON/SEA_ErrorConfig.json
@@ -1,11 +1,11 @@
 {
   "MinimumEnchanterVersion": 1,
-  "SpecialFlag": "I didn't read the documentation!'",
+  "SpecialFlag": "Additive",
   "EnchantmentKeywords": [],
+  "ArtSource": "MissingDependency.esp",
   "SwapData": [
     {
       "CustomSwap1": {
-        "ArtSource": "MissingDependency.esp",
         "WeaponID": { "ModWithoutExtension": "0x19d" },
         "IgnoreKeywords": [],
         "WeaponKeywords": []
