Readability changes in preparation for an optimization pass.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(headers
         include/singletonHolder.h) 
 
 set(sources
+        src/singletonHolder.cpp
         src/actorEventHandler.cpp
         src/helperFunctions.cpp
         src/artSwap.cpp
