Reworked. Now uses PO3's clib.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,101 +1,223 @@
 cmake_minimum_required(VERSION 3.21)
+set(NAME "EnchantmentEffectExtender" CACHE STRING "")
+set(VERSION 1.0.0 CACHE STRING "")
+
+# ---- Options ----
+option(SUPPORT_LATEST "Builds for the latest version of Skyrim." OFF)
+option(SUPPORT_VR "Build for VR. I cannot test this." OFF)
+option(BUILD_SKYRIMVR "Build for Skyrim VR" OFF)
+option(BUILD_SKYRIMAE "Build for Skyrim AE" OFF)
+
+# ---- Cache build vars ----
+macro(set_from_environment VARIABLE)
+	if(NOT DEFINED ${VARIABLE} AND DEFINED ENV{${VARIABLE}})
+		set(${VARIABLE} $ENV{${VARIABLE}})
+	endif()
+endmacro()
+
+macro(find_commonlib_path)
+	if(CommonLibName AND NOT ${CommonLibName} STREQUAL "")
+		find_path(CommonLibPath
+			include/REL/Relocation.h 
+			PATHS extern/${CommonLibName})
+	endif()
+endmacro()
+
+set_from_environment(VCPKG_ROOT) 
+set(CommonLibName "CommonLibSSE")
+find_commonlib_path()
+set(CMAKE_TOOLCHAIN_FILE "${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
+set(VCPKG_TARGET_TRIPLET "x64-windows-static" CACHE STRING "")
+set(Boost_USE_STATIC_RUNTIME OFF CACHE BOOL "")
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" CACHE STRING "")
+add_compile_definitions(SKYRIM_AE)
+add_compile_definitions(SKYRIM_SUPPORT_AE)
+
+# ---- Project ----
 
 project(
-	EnchantmentEffectsExtender 
-	VERSION 1.0.0 
-	DESCRIPTION "Allows for the application of unique effects to enchanted weapons based on configs."
-	LANGUAGES CXX)
+	${NAME}
+	VERSION ${VERSION}
+	LANGUAGES CXX
+)
 
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON) 
+configure_file(
+	${CMAKE_CURRENT_SOURCE_DIR}/cmake/Version.h.in
+	${CMAKE_CURRENT_BINARY_DIR}/include/Version.h
+	@ONLY
+)
 
-#===========================================================================
-#MO2 Deployment
-#===========================================================================
-if(DEFINED ENV{SKYRIM_MODS_FOLDER} AND IS_DIRECTORY "$ENV{SKYRIM_MODS_FOLDER}")
-    set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME}")
+configure_file(
+	${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.rc.in
+	${CMAKE_CURRENT_BINARY_DIR}/version.rc
+	@ONLY
+)
+
+# ---- Include guards ----
+
+if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
+	message(
+		FATAL_ERROR
+			"In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there."
+	)
 endif()
 
-#===========================================================================
-#Plugin depoendencies
-#===========================================================================
-find_package(CommonLibSSE CONFIG REQUIRED)
-find_package(jsoncpp CONFIG REQUIRED)
+# ---- Globals ----
+if (MSVC)
+	if (NOT ${CMAKE_GENERATOR} STREQUAL "Ninja")
+		add_compile_options(
+			/MP	# Build with Multiple Processes
+		)
+	endif ()
+endif ()
+
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF)
+set(Boost_USE_STATIC_LIBS ON)
+
+# ---- Dependencies ----
+
+if (DEFINED CommonLibPath AND NOT ${CommonLibPath} STREQUAL "" AND IS_DIRECTORY ${CommonLibPath})
+	add_subdirectory(${CommonLibPath} ${CommonLibName})
+else ()
+	message(
+		FATAL_ERROR
+		"Variable ${CommonLibName} is not set."
+	)
+endif()
+
 find_path(CLIB_UTIL_INCLUDE_DIRS "ClibUtil/utils.hpp")
+find_package(jsoncpp CONFIG REQUIRED)
 
-set(headers
-        include/actorEventHandler.h
-        include/helperFunctions.h
-        include/artSwap.h
-        include/configParser.h
-        include/equipEventHandler.h
-        include/singletonHolder.h) 
+# ---- Add source files ----
+include(cmake/headerlist.cmake)
+include(cmake/sourcelist.cmake)
 
-set(sources
-        src/singletonHolder.cpp
-        src/actorEventHandler.cpp
-        src/helperFunctions.cpp
-        src/artSwap.cpp
-		src/configParser.cpp
-        src/equipEventHandler.cpp
-        src/main.cpp)
+source_group(
+	TREE
+		${CMAKE_CURRENT_SOURCE_DIR}
+	FILES
+		${headers}
+		${sources}
+)
 
-add_commonlibsse_plugin(${PROJECT_NAME} SOURCES ${headers} ${sources})
-add_library("${PROJECT_NAME}::${PROJECT_NAME}" ALIAS "${PROJECT_NAME}")
+source_group(
+	TREE
+		${CMAKE_CURRENT_BINARY_DIR}
+	FILES
+		${CMAKE_CURRENT_BINARY_DIR}/include/Version.h
+)
 
-target_include_directories(${PROJECT_NAME}
-        PRIVATE
-        $<INSTALL_INTERFACE:${CLIB_UTIL_INCLUDE_DIRS}>
-        $<INSTALL_INTERFACE:${JSONCPP_INCLUDE_DIRS}>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/src>
-        $<INSTALL_INTERFACE:src>)
+# ---- Create DLL ----
+add_library(
+	${PROJECT_NAME}
+	SHARED
+	${headers}
+	${sources}
+	${CMAKE_CURRENT_BINARY_DIR}/include/Version.h
+	${CMAKE_CURRENT_BINARY_DIR}/version.rc
+)
 
-target_link_libraries(${PROJECT_NAME}
-        PRIVATE
-        JsonCpp::JsonCpp
-        CommonLibSSE::CommonLibSSE)
+target_compile_features(
+	${PROJECT_NAME}
+	PRIVATE
+		cxx_std_23
+)
 
-target_include_directories(${PROJECT_NAME}
-        PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+target_compile_definitions(
+	${PROJECT_NAME}
+	PRIVATE
+		_UNICODE
+)
 
-target_precompile_headers(${PROJECT_NAME}
-            PRIVATE 
-            src/PCH.h)
+target_include_directories(
+	${PROJECT_NAME}
+	PRIVATE
+		${CMAKE_CURRENT_BINARY_DIR}/include
+		${CMAKE_CURRENT_SOURCE_DIR}/include
+		${CLIB_UTIL_INCLUDE_DIRS}
+		${JSONCPP_INCLUDE_DIRS}
+)
 
-install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include"
-        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+target_link_libraries(
+	${PROJECT_NAME}
+	PRIVATE
+		${CommonLibName}::${CommonLibName}
+		JsonCpp::JsonCpp
+)
 
-install(TARGETS ${PROJECT_NAME}
-        DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+target_precompile_headers(
+	${PROJECT_NAME}
+	PRIVATE
+		include/PCH.h
+)
 
-#===========================================================================
-#Build and deployment to MO2's directory
-#===========================================================================
+if (MSVC)
+	target_compile_options(
+		${PROJECT_NAME}
+		PRIVATE
+			/sdl             # Enable Additional Security Checks
+			/utf-8           # Set Source and Executable character sets to UTF-8
+			/Zi              # Debug Information Format
+
+			/permissive-     # Standards conformance
+			/Zc:preprocessor # Enable preprocessor conformance mode
+
+			/wd4200          # nonstandard extension used : zero-sized array in struct/union
+
+			"$<$<CONFIG:DEBUG>:>"
+			"$<$<CONFIG:RELEASE>:/Zc:inline;/JMC-;/Ob3>"
+	)
+
+	target_link_options(
+		${PROJECT_NAME}
+		PRIVATE
+			"$<$<CONFIG:DEBUG>:/INCREMENTAL;/OPT:NOREF;/OPT:NOICF>"
+			"$<$<CONFIG:RELEASE>:/INCREMENTAL:NO;/OPT:REF;/OPT:ICF;/DEBUG:FULL>"
+	)
+endif ()
+
+# ---- Post build ----
+if(DEFINED ENV{SKYRIM_MODS_FOLDER} AND IS_DIRECTORY "$ENV{SKYRIM_MODS_FOLDER}")
+	if(BUILD_SKYRIMAE)
+		if (SUPPORT_LATEST)
+			set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME} - Latest")
+		else()
+			set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME} - 640")
+		endif()
+	else() 
+		set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME} - 97")
+	endif()
+endif()
+
 if(DEFINED OUTPUT_FOLDER)
     set(DLL_FOLDER "${OUTPUT_FOLDER}/SKSE/Plugins")
-    set(CONFIG_FOLDER "${OUTPUT_FOLDER}/Enchantment Effects Extender")
-    set(PAPYRUS_SOURCE_FOLDER "${OUTPUT_FOLDER}/Source/Scripts")
-    set(PAPYRUS_SCRIPTS_FOLDER "${OUTPUT_FOLDER}/Scripts")
 
     add_custom_command(
         TARGET "${PROJECT_NAME}"
         POST_BUILD
         COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:${PROJECT_NAME}>" "${DLL_FOLDER}/$<TARGET_FILE_NAME:${PROJECT_NAME}>"
-        COMMAND "${CMAKE_COMMAND}" -E copy_directory "${CMAKE_SOURCE_DIR}/exampleJSON/" "${CONFIG_FOLDER}"
-        COMMAND "${CMAKE_COMMAND}" -E copy_directory "${CMAKE_SOURCE_DIR}/Papyrus/Source/Scripts/" "${PAPYRUS_SOURCE_FOLDER}"
+		COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_PDB_FILE:${PROJECT_NAME}>" "${DLL_FOLDER}/$<TARGET_PDB_FILE_NAME:${PROJECT_NAME}>"
         VERBATIM
     )
-
-    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-        add_custom_command(
-            TARGET "${PROJECT_NAME}"
-            POST_BUILD
-            COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_PDB_FILE:${PROJECT_NAME}>" "${DLL_FOLDER}/$<TARGET_PDB_FILE_NAME:${PROJECT_NAME}>"
-            VERBATIM
-        )
-    endif()
 endif()
- 
+
+# https://gitlab.kitware.com/cmake/cmake/-/issues/24922#note_1371990
+if(MSVC_VERSION GREATER_EQUAL 1936 AND MSVC_IDE) # 17.6+
+	# When using /std:c++latest, "Build ISO C++23 Standard Library Modules" defaults to "Yes".
+	# Default to "No" instead.
+	#
+	# As of CMake 3.26.4, there isn't a way to control this property
+	# (https://gitlab.kitware.com/cmake/cmake/-/issues/24922),
+	# We'll use the MSBuild project system instead
+	# (https://learn.microsoft.com/en-us/cpp/build/reference/vcxproj-file-structure)
+	file(CONFIGURE OUTPUT "${CMAKE_BINARY_DIR}/Directory.Build.props" CONTENT [==[
+<Project>
+  <ItemDefinitionGroup>
+    <ClCompile>
+      <BuildStlModules>false</BuildStlModules>
+    </ClCompile>
+  </ItemDefinitionGroup>
+</Project>
+]==] @ONLY)
+endif()
