feat: add VR support
Includes some issues to fix the build including pinning jsoncpp to a fixed version for cmake 3.27

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "extern/commonlibsse"]
 	path = extern/commonlibsse
 	url = https://github.com/powerof3/CommonLibSSE
+[submodule "extern/CommonLibVR"]
+	path = extern/CommonLibVR
+	url = https://github.com/alandtse/CommonLibVR.git
