--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,6 @@
-
-[submodule "extern/commonlibsse"]
-	path = extern/commonlibsse
-	url = https://github.com/powerof3/CommonLibSSE
+[submodule "Tools/SKSE-CMakeModules"]
+	path = Tools/SKSE-CMakeModules
+	url = https://github.com/Exit-9B/SKSE-CMakeModules.git
+[submodule "External/CommonLibSSE"]
+	path = External/CommonLibSSE
+	url = https://github.com/SeaSparrowOG/CommonLibSSE
