--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,22 @@
-cmake_minimum_required(VERSION 3.21)
-set(PROJECT_AUTHOR "SeaSparrow" CACHE STRING "")
-set(NAME "EnchantmentEffectExtender" CACHE STRING "")
-set(VERSION 2.0.0 CACHE STRING "")
+cmake_minimum_required(VERSION 3.24)
 
-# ---- Options ----
 option(BUILD_TEST "Sets log level to debug." OFF)
 
-# ---- Cache build vars ----
-macro(set_from_environment VARIABLE)
-	if(NOT DEFINED ${VARIABLE} AND DEFINED ENV{${VARIABLE}})
-		set(${VARIABLE} $ENV{${VARIABLE}})
-	endif()
-endmacro()
+# -------- Project ----------
+project(
+	EnchantmentArtExtender
+	VERSION 2.0.0
+	LANGUAGES CXX
+)
 
-macro(find_commonlib_path)
-	if (CommonLibName AND NOT ${CommonLibName} STREQUAL "")
-		# Check path
-		set_from_environment(${CommonLibName}Path)
-		set(CommonLibPath ${${CommonLibName}Path})
-		if (${CommonLibPath} STREQUAL "CommonLibPath-NOTFOUND")
-			#Check extern
-			find_path(CommonLibPath
-			include/REL/Relocation.h
-			PATHS extern/${CommonLibName})
-		endif()
-	endif()
-endmacro()
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-set_from_environment(VCPKG_ROOT) 
-set(CommonLibName "CommonLibSSE")
-find_commonlib_path()
-set(CMAKE_TOOLCHAIN_FILE "${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
-set(VCPKG_TARGET_TRIPLET "x64-windows-static" CACHE STRING "")
-set(Boost_USE_STATIC_RUNTIME OFF CACHE BOOL "")
-set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" CACHE STRING "")
+list(APPEND CMAKE_IGNORE_PATH "${PROJECT_BINARY_DIR}")
+list(APPEND CMAKE_MODULE_PATH
+	"${PROJECT_SOURCE_DIR}/tools/SKSE-CMakeModules/Modules"
+)
+include(SKSEPlugin)
+set(SKSE_USE_XBYAK ON)
 
 add_compile_definitions(SKYRIM_AE)
 add_compile_definitions(SKYRIM_SUPPORT_AE)
@@ -43,155 +26,35 @@ if (BUILD_TEST)
 	add_compile_definitions(DEBUG)
 endif()
 
-# ---- Project ----
-
-project(
-	${NAME}
-	VERSION ${VERSION}
-	LANGUAGES CXX
+SKSEPlugin_Add(
+	${PROJECT_NAME}
+	SOURCE_DIR src
+	SOURCES
+		README.md
+		vcpkg.json
+	PRECOMPILE_HEADERS
+		src/common/PCH.h
 )
 
-configure_file(
-	${CMAKE_CURRENT_SOURCE_DIR}/cmake/Version.h.in
-	${CMAKE_CURRENT_BINARY_DIR}/include/Version.h
-	@ONLY
-)
 
-configure_file(
-	${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.rc.in
-	${CMAKE_CURRENT_BINARY_DIR}/version.rc
-	@ONLY
-)
-
-# ---- Include guards ----
-
-if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
-	message(
-		FATAL_ERROR
-			"In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there."
-	)
-endif()
-
-# ---- Globals ----
-if (MSVC)
-	if (NOT ${CMAKE_GENERATOR} STREQUAL "Ninja")
-		add_compile_options(
-			/MP	# Build with Multiple Processes
-		)
-	endif ()
-endif ()
-
-set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
-set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF)
-set(Boost_USE_STATIC_LIBS ON)
-
-# ---- Dependencies ----
-
-if (DEFINED CommonLibPath AND NOT ${CommonLibPath} STREQUAL "" AND IS_DIRECTORY ${CommonLibPath})
-	add_subdirectory(${CommonLibPath} ${CommonLibName})
-else ()
-	message(
-		FATAL_ERROR
-		"Variable ${CommonLibName} is not set."
-	)
-endif()
-
-find_path(CLIB_UTIL_INCLUDE_DIRS "ClibUtil/utils.hpp")
 find_package(jsoncpp CONFIG REQUIRED)
 
-# ---- Add source files ----
-include(cmake/headerlist.cmake)
-include(cmake/sourcelist.cmake)
-
-source_group(
-	TREE
-		${CMAKE_CURRENT_SOURCE_DIR}
-	FILES
-		${headers}
-		${sources}
-)
-
-source_group(
-	TREE
-		${CMAKE_CURRENT_BINARY_DIR}
-	FILES
-		${CMAKE_CURRENT_BINARY_DIR}/include/Version.h
-)
-
-# ---- Create DLL ----
-add_library(
-	${PROJECT_NAME}
-	SHARED
-	${headers}
-	${sources}
-	${CMAKE_CURRENT_BINARY_DIR}/include/Version.h
-	${CMAKE_CURRENT_BINARY_DIR}/version.rc
-)
-
-target_compile_features(
-	${PROJECT_NAME}
-	PRIVATE
-		cxx_std_23
-)
-
-target_compile_definitions(
-	${PROJECT_NAME}
-	PRIVATE
-		_UNICODE
-)
-
-target_include_directories(
-	${PROJECT_NAME}
-	PRIVATE
-		${CMAKE_CURRENT_BINARY_DIR}/include
-		${CMAKE_CURRENT_SOURCE_DIR}/src
-		${CLIB_UTIL_INCLUDE_DIRS}
-)
-
 target_link_libraries(
-	${PROJECT_NAME}
-	PRIVATE
-		${CommonLibName}::${CommonLibName}
-		JsonCpp::JsonCpp
+		"${PROJECT_NAME}"
+		PRIVATE
+			JsonCpp::JsonCpp
 )
 
-target_precompile_headers(
-	${PROJECT_NAME}
-	PRIVATE
-		src/PCH.h
+set_target_properties(CommonLibSSE PROPERTIES
+	FOLDER External
 )
-
-if (MSVC)
-	target_compile_options(
-		${PROJECT_NAME}
-		PRIVATE
-			/sdl             # Enable Additional Security Checks
-			/utf-8           # Set Source and Executable character sets to UTF-8
-			/Zi              # Debug Information Format
-
-			/permissive-     # Standards conformance
-			/Zc:preprocessor # Enable preprocessor conformance mode
-
-			/wd4200          # nonstandard extension used : zero-sized array in struct/union
-
-			"$<$<CONFIG:DEBUG>:>"
-			"$<$<CONFIG:RELEASE>:/Zc:inline;/JMC-;/Ob3>"
-	)
-
-	target_link_options(
-		${PROJECT_NAME}
-		PRIVATE
-			"$<$<CONFIG:DEBUG>:/INCREMENTAL;/OPT:NOREF;/OPT:NOICF>"
-			"$<$<CONFIG:RELEASE>:/INCREMENTAL:NO;/OPT:REF;/OPT:ICF;/DEBUG:FULL>"
-	)
-endif ()
 
 # ---- Post build ----
 if(DEFINED ENV{SKYRIM_MODS_FOLDER} AND IS_DIRECTORY "$ENV{SKYRIM_MODS_FOLDER}")
-	if(BUILD_SKYRIMAE)
-		set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME}")
-	else() 
+	if(BUILD_TEST)
 		set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME} - Test")
+	else() 
+		set(OUTPUT_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME}")
 	endif()
 endif()
 
@@ -205,24 +68,4 @@ if(DEFINED OUTPUT_FOLDER)
 		COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_PDB_FILE:${PROJECT_NAME}>" "${DLL_FOLDER}/$<TARGET_PDB_FILE_NAME:${PROJECT_NAME}>"
         VERBATIM
     )
-endif()
-
-# https://gitlab.kitware.com/cmake/cmake/-/issues/24922#note_1371990
-if(MSVC_VERSION GREATER_EQUAL 1936 AND MSVC_IDE) # 17.6+
-	# When using /std:c++latest, "Build ISO C++23 Standard Library Modules" defaults to "Yes".
-	# Default to "No" instead.
-	#
-	# As of CMake 3.26.4, there isn't a way to control this property
-	# (https://gitlab.kitware.com/cmake/cmake/-/issues/24922),
-	# We'll use the MSBuild project system instead
-	# (https://learn.microsoft.com/en-us/cpp/build/reference/vcxproj-file-structure)
-	file(CONFIGURE OUTPUT "${CMAKE_BINARY_DIR}/Directory.Build.props" CONTENT [==[
-<Project>
-  <ItemDefinitionGroup>
-    <ClCompile>
-      <BuildStlModules>false</BuildStlModules>
-    </ClCompile>
-  </ItemDefinitionGroup>
-</Project>
-]==] @ONLY)
 endif()
